--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.5",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.488.0",
     "next": "^15.3.0",
     "react": "^19.0.0",
